fixed header styling on iphone

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -564,7 +564,7 @@
       }
       .icon1 {
         position: relative;
-        width:200px;
+        width:250px;
         height: 50px;
     
     }
@@ -1050,7 +1050,7 @@
       }
       .icon1 {
         position: relative;
-        width:350px;
+        width:400px;
         height: 70px;
     
     }
